samples/_failures_safe/1761040099_b76311_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8bd3a9df.c: In function ‘main’:
./samples/SAFE/__tmp_8bd3a9df.c:159:12: error: missing terminating " character
  159 |     printf("First matrix
      |            ^~~~~~~~~~~~~
./samples/SAFE/__tmp_8bd3a9df.c:159:5: error: expected expression at end of input
  159 |     printf("First matrix
      |     ^~~~~~
./samples/SAFE/__tmp_8bd3a9df.c:159:5: error: expected declaration or statement at end of input
